fix: style color dark mode

--- a/studio/src/global/theme/variables.scss
+++ b/studio/src/global/theme/variables.scss
@@ -67,7 +67,7 @@
   :root {
     --ion-background-color: #323639;
 
-    --ion-text-color: #ffffff;
+    --ion-text-color: black;
 
     --ion-border-color: #202124;
 
